# relocation-planner

./: .gitignore  AGENTS.md  README.md  manage.py  pyproject.toml
apps/core/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_task.py  0003_document.py  0004_person.py  0005_document_person.py  0006_documenttype_document_document_type.py  0007_seed_document_types.py  0008_replace_document_name.py  0009_relocation_templates.py  0010_seed_relocation_templates.py  0011_milestone.py  0012_workstream.py  0013_task_workstream.py
assets/css/: app.css
assets/js/: app.js
docs/: PRODUCT_SCOPE.md
relocation_planner/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: build_assets.py
templates/: base.html  home.html
templates/components/: alert.html  badge.html  button.html  card.html  empty_state.html  icon.html  nav_item.html  page_header.html  pagination.html  stat_card.html  table.html
templates/core/: document_confirm_delete.html  document_detail.html  document_form.html  document_list.html  milestone_confirm_delete.html  milestone_detail.html  milestone_form.html  milestone_list.html  person_confirm_delete.html  person_detail.html  person_form.html  person_list.html  project_confirm_delete.html  project_detail.html  project_form.html  project_list.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
templates/layouts/: app.html
templates/partials/: navigation.html
tests/e2e/: conftest.py  test_home.py  test_projects.py
