[project]
name = "relocation-planner"
version = "0.0.1"
description = "Open-source, local-first relocation planning platform"
readme = "README.md"
authors = [
    { name = "Javier Lozada", email = "jalozada@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<6.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "relocation_planner.settings"
testpaths = ["tests/e2e"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "pytest-playwright>=0.8.0",
]
